--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-develop": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-develop": "~0.4.0",
+    "grunt-ejs": "^0.2.0",
+    "grunt-ejs-static": "^0.4.3",
+    "load-grunt-tasks": "~0.6.0",
     "request": "~2.36.0",
-    "time-grunt": "~0.3.2",
-    "load-grunt-tasks": "~0.6.0"
+    "time-grunt": "~0.3.2"
   }
 }
